fix date not showing

--- a/static/main.css
+++ b/static/main.css
@@ -122,6 +122,7 @@ a {
     margin-bottom: 10px;
     bottom: 0;
     font-size: 1.9rem;
+    width: 100%;
 }
 
 .folly__footer span {
